# HomeWorksPartC

./: README.md
Ex_2/: Bus.cpp  Bus.h  CMakeLists.txt  Centraal.cpp  Centraal.h  Graph.h  Intercity.cpp  Intercity.h  Omsterdam.cpp  Omsterdam.h  README.txt  Rail.cpp  Rail.h  Sprinter.cpp  Sprinter.h  Stad.cpp  Stad.h  Station.cpp  Station.h  Tram.cpp  Tram.h  Utilities.cpp  Utilities.h  Vehicles.cpp  Vehicles.h  main.cpp
Ex_3/: Admiral.cpp  Admiral.h  AdmiralFactory.cpp  AdmiralFactory.h  AgentFactory.cpp  AgentFactory.h  Bomber.cpp  Bomber.h  CMakeLists.txt  Commander.cpp  Commander.h  CommanderFactory.cpp  CommanderFactory.h  Controller.cpp  Controller.h  Destroyer.cpp  Destroyer.h  Falcon.cpp  Falcon.h  FortressStar.cpp  FortressStar.h  ImperialAgent.cpp  ImperialAgent.h  Model.cpp  Model.h  Object.cpp  Object.h  README.txt  Rocket.cpp  Rocket.h  Shipman.cpp  Shipman.h  ShipmanFactory.cpp  ShipmanFactory.h  Shuttle.cpp  Shuttle.h  SpaceShip.cpp  SpaceShip.h  SpaceStation.cpp  SpaceStation.h  (+7 more)
HW1/: BQ.cpp  BQ.h  CH.cpp  CH.h  CMakeLists.txt  RCPtr.h  README.txt  SARS_CoV_2.cpp  SARS_CoV_2.h  Utilities.cpp  Utilities.h  XBB.cpp  XBB.h  main.cpp  simulation.cpp  simulation.h  world.h
